--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -20,3 +20,17 @@ jobs:
       - name: unittest
         run: |
           pytest test/test.py
+
+      - name: docker build
+        run: |
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/edtm-python-fastapi-demo:${{ github.sha }} .
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: docker push
+        run: |
+          docker push ${{ secrets.DOCKER_USERNAME }}/edtm-python-fastapi-demo:${{ github.sha }}
